{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 16,
  "lineage": "5ce547d7-5e0d-b9b8-564c-f2a04c462775",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-17T15:08:43.075-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformvaldy/global/firewalls/custom-allow-http",
            "log_config": [],
            "name": "custom-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/networks/custom-vpc",
            "priority": 1000,
            "project": "terraformvaldy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/firewalls/custom-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "http-server"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-17T15:14:59.254-07:00",
            "deny": [],
            "description": "Allow SSH from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformvaldy/global/firewalls/custom-allow-ssh",
            "log_config": [],
            "name": "custom-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/networks/custom-vpc",
            "priority": 1000,
            "project": "terraformvaldy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/firewalls/custom-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraformvaldy/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "project": "terraformvaldy",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "asia_southeast_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-17T15:08:44.478-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraformvaldy/regions/asia-southeast2/subnetworks/asia-southeast-subnet",
            "ip_cidr_range": "10.0.0.0/27",
            "name": "asia-southeast-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformvaldy",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/regions/asia-southeast2/subnetworks/asia-southeast-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "europe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-17T15:08:44.224-07:00",
            "gateway_address": "10.0.10.1",
            "id": "projects/terraformvaldy/regions/europe-central2/subnetworks/europe-subnet",
            "ip_cidr_range": "10.0.10.0/27",
            "name": "europe-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformvaldy",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformvaldy/regions/europe-central2/subnetworks/europe-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    }
  ]
}